<resources>
    <string name="app_name">Crypto Tracker 2.1</string>
    <string name="button_addCrypto">Add Crypto</string>
    <string name="hint_cryptoTitle">Crypto Title</string>
    <string name="hint_cryptoDescription">Description </string>
    <string name="menu_addCrypto">Add</string>
    <string name="menu_cancelCrypto">Cancel</string>
    <string name="button_addImage"> Add Image </string>
    <string name="enter_crypto_title">Enter Crypto Title</string>
    <string name="save_crypto">Save Crypto</string>
    <string name="select_crypto_image">Select Crypto Image</string>
    <string name="change_image">Update Logo</string>
    <string name="change_crypto_image">Change Crypto Icon</string>
    <string name="menu_deleteCrypto">Delete</string>
    <string name="hint_cryptoAmount">Crypto Amount</string>
    <string name="hint_cryptoValue">Crypto Value</string>
    <string name="title_activity_map">Crypto Map</string>
    <string name="menu_addPlacemark">Add Crypto</string>
    <string name="button_location">Set Location</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="crypto_list">Crypto List</string>
    <string name="action_AddCrypto">Add Crypto</string>
    <string name="group_communicate">Connect Section\n</string>
    <string name="action_share">Share</string>
    <string name="action_send">Send</string>
    <string name="nav_header_desc">Nav Header</string>
    <string name="nav_header_title">CryptoTracker 2.2</string>
    <string name="action_report">test set</string>
    <string name="action_donate">Add Crypto</string>
    <string name="no_crypto_added_yet">No Crypto Added Yet</string>
    <string name="cryptoNotFound">.</string>
    <string name="cryptoError">Error : Couldn\'t add crypto...</string>
    <string name="add_crypto">Add Crypto</string>
    <string name="cryptoDetails">Crypto Details</string>
    <string name="amt">Amount :</string>
    <string name="total">Total :</string>

</resources>

